--- a/uni-style.css
+++ b/uni-style.css
@@ -38,7 +38,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         --accent-font:'Roboto', sans-serif;
         --box-shadow: 0px 4px 8px #00000000;
         --font-size: 16px;
-        --foot-margin: 1rem;
+        --foot-margin: 2rem;
     }
 
     .info {
@@ -178,6 +178,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         font-family: var(--accent-font);
         background-color: var(--info-background);
         color: var(--info-text);
+        font-size: 0.7rem;
         margin: 0;
         margin-top: var(--foot-margin); 
         margin-bottom: var(--foot-margin);
@@ -189,13 +190,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
         bottom: 0;
 
             width: 100%;
-            background-color: var(--info-background);
-            color: var(--info-text);
+    
 
         background-color: var(--info-background);
         color: var(--info-text);
         
-        outline: 1px solid #000000;
+        outline: 1px solid #f2ff00;
         box-shadow: 0 -2px 10px #24242420,
                     -10px 0 300px 50px #000000,
                     10px 0 30px 50px #000000,
@@ -206,9 +206,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
     }
 
-    #footer-text {
-       
-    }
 
     #footer-banner #footer-content {
         width: 100%;
@@ -220,8 +217,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         text-align: center;
                 /* font-size: var(--font-size); */
 
-        font-size: 0.7rem;
-        font-family: 'Inconsolata', sans-serif;
+    
         line-height: 1;
         transition: transform 5s ease-in-out;
         transform: translateY(100%);
@@ -337,9 +333,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     .card-text {
-        font-family: 'Inconsolata', monospace;
+        font-family: var(--accent-font);
         font-size: var(--font-size);
-        line-height: 1.5;
+        /* line-height: 1.5; */
     }
 
     .card-text h5 {
