--- a/uni-style.css
+++ b/uni-style.css
@@ -195,7 +195,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         background-color: var(--info-background);
         color: var(--info-text);
         
-        outline: 1px solid #00f7ff;
+        outline: 1px solid #04ff00;
         box-shadow: 0 -2px 10px #24242420,
                     -10px 0 300px 50px #000000,
                     10px 0 30px 50px #000000,
@@ -425,9 +425,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         padding: var(--spacing);
         font-family: var(--accent-font);
         color: var(--info-text);
-        font-size: 0.85rem;
+        font-size: 0.9rem;
         padding-top: -3rem;
-        line-height: 1.1rem;
+        line-height: 1.2rem;
         text-align: left; /* Uniforma l'allineamento */
          /* font-family: 'Inconsolata', monospace; */
        
