--- a/uni-style.css
+++ b/uni-style.css
@@ -198,7 +198,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         background-color: var(--info-background);
         color: var(--info-text);
         
-        outline: 1px solid #04ff00;
+        outline: 1px solid #ff0000;
         box-shadow: 0 -2px 10px #24242420,
                     -10px 0 300px 50px #000000,
                     10px 0 30px 50px #000000,
