--- a/uni-style.css
+++ b/uni-style.css
@@ -183,7 +183,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         box-shadow: 0 -2px 10px #24242420,
                     -10px 0 300px 50px #000000,
                     10px 0 30px 50px #000000,
-                    0 10px 60px 50px #000000;
+                    0 10px 70px 50px #000000;
 
        
     }
@@ -192,7 +192,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         transition: transform 0.5s ease-in-out;
         transform: translateY(100%);
 
-        outline: 1px solid #aa00ff;
+        outline: 1px solid #000000;
        
         
        
@@ -411,9 +411,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         padding: var(--spacing);
         font-family: var(--accent-font);
         color: var(--info-text);
-        font-size: 0.89rem;
+        font-size: 0.85rem;
         padding-top: -3rem;
-        line-height: 1.19rem;
+        line-height: 1.15rem;
         text-align: left; /* Uniforma l'allineamento */
          /* font-family: 'Inconsolata', monospace; */
        
