--- a/uni-style.css
+++ b/uni-style.css
@@ -39,6 +39,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         --box-shadow: 0px 4px 8px #00000000;
         --font-size: 16px;
         --foot-margin: 1rem;
+        --live-color: #00bbff;
+        --static-color: #ffbbff;
     }
 
     .info {
@@ -499,14 +501,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     .link-live {
         display: inline-block;
-        color: #00ff00;
+        color: var(--live-color);
         font-weight: bold;
         animation: blink 1s infinite;
     }
 
     .link-static {
         display: inline-block;
-        color: var(--link-accent);
+        color: var(--static-color);
         font-weight: normal;
     }
 
