--- a/uni-style.css
+++ b/uni-style.css
@@ -503,6 +503,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         display: inline-block;
         color: var(--live-color);
         font-weight: bold;
+        content: "◉"; /* *⌝ █ */
         animation: blink 3s infinite;
     }
 
@@ -510,6 +511,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         display: inline-block;
         color: var(--static-color);
         font-weight: bold;
+        content: "◎"; /* *⌝ █ */
         animation: blink 12s infinite;
     }
 
