--- a/uni-style.css
+++ b/uni-style.css
@@ -16,15 +16,10 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.0
+# Version: v3.0 UpperBones
 # URL: https://genialabile.com/uni-style.css
 ===============================================================================
 */
-
-
-
-
-
 
 /*---// STARTLINE & SAY HI //---*/
     :root {
@@ -101,12 +96,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
             margin: 0; 
             padding-bottom: 5rem; 
         }
-      /*  main, #typing-effect, #typing-container  {
-            padding: var(--spacing); 
-            margin: 0; 
-            padding-bottom: 5rem;
-        }
-        */
     }
 
     @media screen and (max-width: 768px) {
@@ -128,44 +117,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 0.7rem;
         }
     }
-
-
-    /* Effetto ADD 
-    @media screen and (max-width: 768px) {
-        #typing-effect, #typing-container {
-            font-size: 1.2rem;
-            line-height: 1.4;
-        }
-    }
     
-    @media screen and (max-width: 480px) {
-        #typing-effect, #typing-container {
-            font-size: 1rem;
-            line-height: 1.3;
-        }
-    }
-      Effetto ADD */
-
-    /*
-    @media screen and (max-width: 768px) {
-        #typing-effect {
-            font-size: 1.2rem;
-            line-height: 1.4;
-        }
-        #typing-container {
-            padding: var(--spacing);
-        }
-    }
-    
-
-    @media screen and (max-width: 480px) {
-        #typing-effect {
-            font-size: 1rem;
-            line-height: 1.3;
-        }
-    }
-    */
-   
     footer, #footer-banner {
         position: bottom;
         bottom: 0;
@@ -185,28 +137,19 @@ Use, distribution, or modification of this project is strictly prohibited withou
         box-shadow: 0 -2px 10px #24242424,
                     -10px 0 300px 50px #000000,
                     10px 0 300px 50px #000000,
-                    0 10px 100px 70px #000000;
-
-       
+                    0 10px 100px 70px #000000;       
     }
 
     #footer-banner {
         transition: transform 0.5s ease-in-out;
         transform: translateY(100%);
-
         outline: 1px solid #000000;
-       
-        
-       
-        
     }
-
 
     #footer-banner #footer-content {
         padding: 10px;
         margin: 0;
         text-align: center;
-                /* font-size: var(--font-size); */
         line-height: 1;
         transition: none;
     }
@@ -293,8 +236,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         text-decoration: underline; 
     }
 
-     /*---// card //---*/ 
-
+    /*---// CARD //---*/ 
     .card {
         display: flex;
         align-items: center; 
@@ -323,7 +265,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
     .card-text {
         font-family: var(--info-text);
         font-size: var(--font-size);
-        /* line-height: 1.5; */
     }
 
     .card-text h5 {
@@ -336,64 +277,17 @@ Use, distribution, or modification of this project is strictly prohibited withou
         margin: 0;
     }
 
-        
-    /*---// CARD //--- */
-
-
-
-
-    /*
-    #typing-container {
-        width: 100%;
-        margin: 0 auto;
-        padding: var(--spacing);
-    }
-   
-
-    #typing-effect {
-        font-family: 'Inconsolata', monospace;
-        font-size: var(--testo-size);
-        color: var(--info-text);
-        white-space: pre-wrap;
-        word-wrap: break-word;
-        line-height: 1.6;
-        display: inline;
-    }
-
-    #typing-effect::after {
-        content: "*⌝";
-        animation: blink 1s steps(1) infinite;
-        font-size: 1.3rem;
-        font-weight: normal;
-        display: inline;
-    }
-
-    .no-cursor::after {
-        content: "";
-        animation: none;
-    }
-
-    @keyframes blink {
-        50% {
-            opacity: 0;
-        }
-    }
-    */
-
-    /* --- Typing Animation Effect --- */
+    /* --- FX --- */
     #live-title {
-        margin-bottom: 0.5rem; /* Spaziatura specifica solo per questo titolo */
+        margin-bottom: 0.5rem; 
     }
 
-
-    /* Nascondi inizialmente il testo del footer */
     .hidden-text #footer-text {
         visibility: hidden;
         opacity: 0;
         transition: opacity 3s ease-in-out;
     }
 
-    /* Mostra il testo quando la classe è attivata */
     .show-text #footer-text {
         visibility: visible;
         opacity: 1;
@@ -416,29 +310,21 @@ Use, distribution, or modification of this project is strictly prohibited withou
         padding-top: -3rem;
         font-size: 0.9rem;
         line-height: 1.2rem;
-        text-align: left; /* Uniforma l'allineamento */
-         /* font-family: 'Inconsolata', monospace; */
-       
-         /* font-size: var(--testo-size); Dimensione base */
-        /* color: var(--info-text);  Colore dal CSS master */
-        white-space: pre-wrap; /* Mantiene gli spazi vuoti e le linee */
-        word-wrap: break-word; /* Permette il wrapping del testo */
-         /*  line-height: 1.6;Altezza della linea */
-        display: inline; /* Assicura che il cursore resti accanto al testo */
-
-
+        text-align: left;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        display: inline;
     }
 
     #typing-effect::after {
-        content: "*⌝"; /* *⌝ █ */
+        content: "*⌝"; /* █ */
         animation: blink 1s steps(1) infinite;
         font-family: 'Inconsolata', monospace;
         font-size: 1rem;
         font-weight: normal;
-        display: inline; /* Evita che il cursore vada a capo */
+        display: inline;
     }
-
-    /* Nasconde il cursore */
+    
     .no-cursor::after {
         content: "";
         animation: none;
@@ -449,50 +335,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
             opacity: 0;
         }
     }
-
-    /* Responsive Design 
-    @media screen and (max-width: 768px) {
-        #typing-effect {
-            font-size: 1.2rem; /* Riduce la dimensione del testo per schermi più piccoli 
-            line-height: 1.4; /* Regola l'altezza della linea 
-        }
-        #typing-container {
-            padding: 1rem; /* Riduce il padding per schermi piccoli 
-        }
-    }
-
-    @media screen and (max-width: 480px) {
-        #typing-effect {
-            font-size: 1rem; /* Testo ancora più piccolo per dispositivi molto piccoli
-            line-height: 1.3;
-        }
-    }
-    */
-
-
-
-    /* Responsive adjustments 
-    @media screen and (max-width: 768px) {
-        #typing-container,
-        #typing-effect {
-            font-size: 14px; /* Adatta la dimensione del font per dispositivi piccoli 
-            line-height: 1.4; /* Leggibilità migliorata 
-        }
-    }
-
-    @media screen and (max-width: 480px) {
-        #typing-container,
-        #typing-effect {
-            font-size: 12px; /* Adatta ulteriormente per schermi molto piccoli *
-            line-height: 1.3;
-        }
-    }
-    */
-
-  
-
-
-
 
     footer .link-live,
     footer .link-static {
@@ -511,8 +353,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         display: inline-block;
         color: var(--static-color);
         font-weight: bold;
-        
-        /* animation: blink 9s infinite; */
     }
 
     body.static-page .link-live {
@@ -533,15 +373,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     .thin-line {
         border: none;
-        border-top: 1px solid #f4f4f480; /* Cambia colore a piacere */
-        margin: 0.5rem 0; /* Spaziatura sopra e sotto */
-        width: 100%; /* Larghezza personalizzata */
+        border-top: 1px solid #f4f4f480;
+        margin: 0.5rem 0;
+        width: 100%;
     }
     .thin-line-super {
         border: none;
-        border-top: 1px solid #f4f4f450; /* Cambia colore a piacere */
-        margin: -3rem -3rem; /* Spaziatura sopra e sotto */
-        width: 100%; /* Larghezza personalizzata */
+        border-top: 1px solid #f4f4f450;
+        margin: -3rem -3rem;
+        width: 100%;
     }
 
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
