--- a/uni-style.css
+++ b/uni-style.css
@@ -22,6 +22,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 */
 
 /*---// STARTLINE & SAY HI //---*/
+
     :root {
         --background-color: #000000;
         --info-background: #000000;
@@ -117,9 +118,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 0.7rem;
         }
     }
-    
+
     footer, #footer-banner {
-        position: bottom;
+        position: bottom; /* Lo so. Ma c'è un grande perché */
         bottom: 0;
         left: 0;
         right: 0;
@@ -166,7 +167,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         margin-top: 3rem;
     }
 
-    h1, h2{
+    h1, h2 {
         color: var(--accent);
         margin-bottom: 0.5rem;
         font-family: var(--accent-font);
@@ -268,7 +269,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     .card-text h5 {
-        margin: 0 0 0.5rem 0;/
+        margin: 0 0 0.5rem 0;
         font-size: 1rem;
         font-weight: normal;
     }
@@ -377,6 +378,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         margin: 0.5rem 0;
         width: 100%;
     }
+
     .thin-line-super {
         border: none;
         border-top: 1px solid #f4f4f450;
