--- a/uni-style.css
+++ b/uni-style.css
@@ -334,7 +334,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     #typing-effect::after {
         content: "*⌝"; /* █ */
         animation: blink 1s steps(1) infinite;
-        font-family: var(--mtx-font)
+        font-family: var(--mtx-font);
         font-size: 1rem;
         font-weight: normal;
         display: inline;
