--- a/uni-style.css
+++ b/uni-style.css
@@ -123,9 +123,23 @@ Use, distribution, or modification of this project is strictly prohibited withou
         }
     }
 
-    footer, #footer-banner {
-        position: bottom; /* Lo so. Ma c'è un grande perché */
+    footer {
+        position: yup; /* yup */
         bottom: 0;
+        z-index: 1000;
+    }
+    #footer-banner {
+        position: relative; /* REL */
+        bottom: 0;
+        z-index: 1;
+        box-shadow: 0 -2px 10px #24242424,
+        -10px 0 300px 50px #000000,
+        10px 0 300px 50px #000000,
+        0 10px 100px 70px #000000; 
+    }
+    
+    footer, #footer-banner {
+        
         left: 0;
         right: 0;
         width: 100%;
@@ -137,20 +151,20 @@ Use, distribution, or modification of this project is strictly prohibited withou
         padding: 10px;
         margin: 0;
         align-items: center;
-        z-index: 1000;
+       
         overflow-x: hidden;
         box-shadow: 0 -2px 10px #24242424,
                     -10px 0 300px 50px #000000,
                     10px 0 300px 50px #000000,
                     0 10px 100px 70px #000000;       
     }
-
+    
     #footer-banner {
         transition: transform 0.5s ease-in-out;
         transform: translateY(100%);
         outline: 1px solid #000000;
     }
-
+    
     #footer-banner #footer-content {
         padding: 10px;
         margin: 0;
@@ -158,7 +172,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         line-height: 1;
         transition: none;
     }
-
+    
     #footer-banner.active {
         transform: translateY(0);
     }
