Modifica il font-family in uni-style.css per uniformare lo stile del testo

--- a/uni-style.css
+++ b/uni-style.css
@@ -348,7 +348,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     #typing-effect::after {
         content: "█"; /* *⌝ █ */
         animation: blink 1s steps(1) infinite;
-        font-family: var(--mtx-font);
+        font-family: var(--std-font);
 
         font-size: 2rem;
         font-weight: normal;
