--- a/uni-style.css
+++ b/uni-style.css
@@ -348,12 +348,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
     #typing-effect::after {
         content: "█"; /* *⌝ █ */
         animation: blink 1s steps(1) infinite;
-        font-family: var(--mtx-font);
+        font-family: var(--std-font);
 
-        font-size: 2rem;
+        font-size: 1rem;
         font-weight: normal;
         display: inline;
-
+        
+        padding-bottom: 1rem;
         color: var(--bg-color);
     }
     
